--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
     <body>
         <canvas id="tv-screen"></canvas>
-        <script src="js/app.js"></script>
+        <script src="dvd.js"></script>
     </body>
 </html>
